--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://username.github.io"
+url: "http://valbross.github.io"
 baseurl: "http://valbross.github.io"
 
 # If you are building a GitHub project page then use these settings:
